# stellar-trust-escrow

./: Cargo.toml  Dockerfile  TODO.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pr_body.txt
.claude/: settings.json
.husky/: install.mjs
backend/: .env.example  DEPRECATION_IMPLEMENTATION.md  jest.config.js  openapi.yaml  package-lock.json  package.json  server.js
contracts/governance/: Cargo.toml
contracts/governance/src/: errors.rs  events.rs  lib.rs  tests.rs  types.rs
contracts/governance/test_snapshots/tests/tests/: test_admin_can_cancel.1.json  test_admin_can_update_config.1.json  test_cast_vote_against.1.json  test_cast_vote_for.1.json  test_create_proposal_insufficient_tokens_fails.1.json  test_create_proposal_mismatched_payload_fails.1.json  test_create_text_proposal.1.json  test_double_initialize_fails.1.json  test_double_vote_fails.1.json  test_execute_before_timelock_fails.1.json  test_execute_fund_allocation_transfers_tokens.1.json  test_execute_text_proposal_after_timelock.1.json  test_finalize_before_vote_end_fails.1.json  test_finalize_defeated_when_quorum_not_met.1.json  test_finalize_passes_with_quorum_and_majority.1.json  test_initialize_stores_config.1.json  test_non_admin_cannot_update_config.1.json  test_parameter_change_proposal_full_lifecycle.1.json  test_proposer_can_cancel.1.json  test_stranger_cannot_cancel.1.json  test_vote_after_period_fails.1.json  test_vote_before_delay_fails.1.json
docs/: api-auth-audit.md  api-reference.md  smart-contract-guide.md
frontend/: .env.example  jest.config.cjs  (+4 more)
(+250 files in other folders)
